--- a/src/pages/Buttens/style.module.css
+++ b/src/pages/Buttens/style.module.css
@@ -1,9 +1,9 @@
 .buttens{
- width: 100%;
+ width: 92%;
 display: flex;
 flex-direction: row;
 justify-content: space-between;
-margin: 20px  2px 20px 2px ;
+margin: 20px ;
 
 }
 
@@ -12,6 +12,6 @@ margin: 20px  2px 20px 2px ;
     cursor: pointer;
     border: 0cap;
     padding: 5px;
-    background-color:  rgb(0, 0, 0);
+    background-color:  rgb(25, 8, 31);
     color: rgb(182, 56, 220);
 }
