--- a/src/components/Content/style.module.css
+++ b/src/components/Content/style.module.css
@@ -1,6 +1,6 @@
 .content{
     width: 60vw;
-    height: 60vh;
+    min-height: 60vh;
     margin: auto;
     border-radius: 10px;
     box-shadow: 0px 0px 10px 1px rgba(1, 1, 1, 1);
