--- a/src/pages/Buttens/style.module.css
+++ b/src/pages/Buttens/style.module.css
@@ -11,7 +11,9 @@ margin: 20px ;
     border-radius: 20%;
     cursor: pointer;
     border: 0cap;
-    padding: 5px;
+    padding: 10px;
     background-color:  rgb(25, 8, 31);
     color: rgb(182, 56, 220);
+    border-radius: 5px;
+   
 }
