--- a/src/components/Content/style.module.css
+++ b/src/components/Content/style.module.css
@@ -7,3 +7,13 @@
     background-color: #8a63d2;
     color: black;
 }
+@media (max-width: 600px) {
+    .content {
+        width: auto;
+        max-width: 70vw;
+        min-height: 60vh;
+        box-shadow: 0px 0px 8px 1px rgba(1, 1, 1, 0.5);
+        background-color: #a07ad2;
+        color: white;
+    }
+}
