--- a/src/pages/TableTasks/style.module.css
+++ b/src/pages/TableTasks/style.module.css
@@ -2,21 +2,27 @@
 .table {
   width: 100%;
   border-collapse: collapse;
-  margin: 10px; /* רווח מלמעלה ומלמטה */
+  margin: 10px;
+  /* רווח מלמעלה ומלמטה */
 }
 
-.table th, .table td {
-  padding: 6px; /* רווח פנימי בתאים */
-  text-align: left; /* יישור טקסט לשמאל */
+.table th,
+.table td {
+  padding: 6px;
+  /* רווח פנימי בתאים */
+  text-align: left;
+  /* יישור טקסט לשמאל */
 }
 
 .table th {
-  background-color: #6a1b9a; /* רקע צבע אפור בתאי כותרת */
+  background-color: #6a1b9a;
+  /* רקע צבע אפור בתאי כותרת */
   vertical-align: middle;
 }
 
 .table td input[type="checkbox"] {
-  margin-right: 5px; /* רווח מימין לצד ה-checkbox */
+  margin-right: 5px;
+  /* רווח מימין לצד ה-checkbox */
 }
 
 .table tr:nth-child(2n) {
@@ -25,7 +31,8 @@
 
 .table td .react-icon {
   font-size: 16px;
-  color: #3498db; /* צבע כחול לדוגמא */
+  color: #3498db;
+  /* צבע כחול לדוגמא */
 }
 
 .taskDone {
@@ -34,12 +41,22 @@
 
 /* סגנונות נוספים למסך קטן */
 @media (max-width: 600px) {
-  .table th, .table td {
-      padding: 4px;
-      font-size: 12px;
+
+  .table {
+    font-size: 14px;
+    margin: 5px;
+    width: 90%;
+    border-collapse: collapse;
+  }
+
+  .table th,
+  .table td {
+    padding: 4px;
+    font-size: 12px;
+    margin: 5px;
   }
 
   .table td .react-icon {
-      font-size: 14px;
+    font-size: 14px;
   }
 }
